todo_application/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-application-dep
  namespace: project
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: todo-application
  template:
    metadata:
      labels:
        app: todo-application
    spec:
      volumes:
        - name: shared-todo-application
          persistentVolumeClaim:
            claimName: todo-application-claim
      containers:
        - name: todo-application
          # image: pavezzo/todo-application:391fc1782300ad2c8303bceb2bea4357e7c09421
          image: PROJECT/IMAGE-APPLICATION
          resources:
            limits:
              cpu: "100m"
              memory: "50Mi"
          volumeMounts:
            - name: shared-todo-application
              mountPath: /usr/src/app/files
