todo_application/manifests/todobackenddeployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-backend-dep
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-backend
  template:
    metadata:
      labels:
        app: todo-backend
    spec:
      containers:
        - name: todo-backend
          image: pavezzo/todo-backend:53b4f69bc244e2b0fe947196aa09e03a5d1fd66a
