todo_application/manifests/todobackendservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: todo-backend-svc
  namespace: project
spec:
  type: NodePort
  selector:
    app: todo-backend
  ports:
    - port: 80
      protocol: TCP
      targetPort: 3000
